# librarian

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json
.github/workflows/: ci.yml  lint.yml
frontend/: .env.development  .eslintrc.cjs  .prettierrc.json  README.md  index.html  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.vue  main.ts  styles.css
frontend/src/components/: DarkToggle.vue  ExpiryTime.vue  FooterInfo.vue  InviteAdd.vue  LoginForm.vue  Toast.vue  ToastContainer.vue
frontend/src/composables/: use-auth.ts  use-backend-fetch.ts  use-backend.ts  use-dark-mode.ts  use-invite-config.ts  use-toast.ts
frontend/src/pages/: [...catchall].vue  admin.vue  index.vue  invite.vue
frontend/src/types/: components.d.ts  imports.d.ts  invites.ts  router.d.ts
src/: komga.rs  main.rs
src/routes/: auth.rs  invite.rs  mod.rs
