[package]
name = "k-librarian"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = {version = "0.7.2", features = ["tracing", "query", "json"]}
dotenv = "0.15.0"
lazy_static = "1.4.0"
reqwest = {version = "0.11.22", features = ["json"]}
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
serde_qs = "0.12.0"
tokio = {version = "1.35.0", features = ["full"]}
tower-http = {version = "0.5.0", features = ["cors", "trace", "fs"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
uuid = {version = "1.6.1", features = ["v4", "fast-rng"]}
urlencoding = "2.1.3"
redis = {version = "0.24", features = ["aio", "tokio-comp"]}
chrono = "0.4.31"