[package]
name = "k-librarian"
version = "0.1.3"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = {version = "0.7.5", features = ["tracing", "query", "json"]}
dotenv = "0.15.0"
reqwest = {version = "0.12.2", features = ["json"]}
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
tokio = {version = "1.37.0", features = ["full"]}
tower-http = {version = "0.5", features = ["cors", "trace", "fs"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
uuid = {version = "1.8.0", features = ["v4", "fast-rng"]}
urlencoding = "2.1.3"
redis = {version = "0.25", features = ["aio", "tokio-comp"]}
chrono = "0.4"
garde = {version = "0.18", features = ["derive", "email", "email-idna", "serde"]}
